--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@ body {
 
 
 
+/* .swiper-wrapper {
+  transition-timing-function: linear !important;
+} */
 
 
 
@@ -41,3 +44,16 @@ body {
   }
 } */
 
+
+/* @keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 40s linear infinite;
+} */
