--- a/src/index.css
+++ b/src/index.css
@@ -270,3 +270,11 @@ body {
 .group-data-\[vaul-drawer-direction\=bottom\]\/drawer-content\:block {
   display: none !important;
 }
+
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
+}
+.animate-blink {
+  animation: blink 1s step-start infinite;
+}
